--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "build:sw": "node esbuild-sw.js",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "biome check check --apply src/**/*",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "workbox-window": "^7.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.6.4",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
