--- a/biome.json
+++ b/biome.json
@@ -8,5 +8,14 @@
     "rules": {
       "recommended": true
     }
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space"
+  },
+  "json": {
+    "parser": {
+      "allowTrailingCommas": true
+    }
   }
 }
